# OrionII

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COORDINATION.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release-installer.yml
docs/: ADR-001-entity-event-bus.md  ADR-002-iggy-transport.md  ADR-003-nats-jetstream-transport.md  ADR-004-commissioning-flow.md  STATUS.md  orion-architecture-v1.md  orion-architecture-v1.mdx  sao-commissioning-contract.md  sao-mvp-client.md
scripts/: build-installer.ps1  prepare-iggy-sidecar.ps1  prepare-nats-sidecar.ps1
src/: App.tsx  Commissioning.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/orion/: birth.rs  bootstrap.rs  bus.rs  charter.rs  charter_template.rs  commissioning_client.rs  curator.rs  ego.rs  egress.rs  ethics.rs  governance.rs  id.rs  identity.rs  iggy_auth.rs  iggy_supervisor.rs  journal.rs  memory.rs  message.rs  mod.rs  model.rs  nats_supervisor.rs  payloads.rs  persistence.rs  sao.rs  security.rs  service.rs  skills.rs  superego_local.rs  topics.rs
src-tauri/src/orion/bus/: iggy.rs  inmem.rs  mod.rs  nats.rs
src-tauri/templates/roles/: README.md  calendar_assistant.toml  compliance_reviewer.toml  email_triage.toml  project_coordinator.toml  research_analyst.toml  tech_document_reader_writer.toml
