[package]
name = "orionii"
version = "0.1.0"
description = "OrionII M0 skeleton"
authors = ["OrionII Contributors"]
edition = "2021"

[lib]
name = "orionii_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
