[package]
name = "orionii"
version = "0.1.1"
description = "OrionII M0 skeleton"
authors = ["OrionII Contributors"]
edition = "2021"

[lib]
name = "orionii_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
async-trait = "0.1"
async-nats = "0.47.0"
blake3 = "1"
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6"
futures-util = "0.3"
iggy = "0.10"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
